Resolved Search Bar issue on mobile.

--- a/assets/src/styles/components/_book-details.scss
+++ b/assets/src/styles/components/_book-details.scss
@@ -11,7 +11,7 @@
         &--rating {  
             padding:  30px 0px;
         .fa-star {
-            font-size: 1em;
+            font-size: .5em;
         }
         .checked {
             color: teal;
@@ -22,7 +22,7 @@
     @include flexy (row, center, flex-start);
     
     }
-    @include mobile {
+    @include supermobile {
         @include flexy (column, center, center);
     }
 }
@@ -38,7 +38,6 @@
     }
     &__editbook {
         width: 5vw;
-        height: 3vh;
         font-size: 1em;
         
     }
