--- a/assets/src/styles/components/_hamburger-button.scss
+++ b/assets/src/styles/components/_hamburger-button.scss
@@ -12,6 +12,6 @@
 .burgerOpen {
     display: none !important;
 }
-.myLinks {
+.mylinks {
     display: none;
 }
