--- a/assets/src/styles/index.scss
+++ b/assets/src/styles/index.scss
@@ -33,6 +33,7 @@ main {
         background-color: color(accent);
         color: white;
         border-radius: $rndborder;
+        border: none;
         #delete {
             width: 2vw;
         }
